# xtionpro_sample_applications

./: .gitignore  LICENSE  README.md  note1_installation_process.txt
Archive/: Sensor-Bin-Linux-x64-v5.1.0.41.tar.bz2
xtionpro_sensor_interface/: CMakeLists.txt
xtionpro_sensor_interface/src/: main_script.cpp
xtionpro_sensor_save_images/: CMakeLists.txt  main_script.m
xtionpro_sensor_save_images/src/: main_script.cpp  main_script.cpp~
